After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722347 - Fix build after cogl_texture_get_format() deprecation
Fix build after cogl_texture_get_format() deprecation
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-01-16 15:18 UTC by Florian Müllner
Modified: 2014-01-16 15:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cursor-tracker: Rely on gbm_bo_imports()'s buffer validation (2.80 KB, patch)
2014-01-16 15:18 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2014-01-16 15:18:31 UTC
It should be safe to just remove the code that was using it, so do that instead of porting to the new cogl_texture_get_components() API.
Comment 1 Florian Müllner 2014-01-16 15:18:34 UTC
Created attachment 266476 [details] [review]
cursor-tracker: Rely on gbm_bo_imports()'s buffer validation

cogl_texture_get_format() has been deprecated, so rather than using
it to figure out beforehand whether the buffer format is supported,
just rely on the import failing if it isn't.
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-01-16 15:35:34 UTC
Review of attachment 266476 [details] [review]:

Yeah, this is something I wanted to do. Glad you beat me to it, though.
Comment 3 Florian Müllner 2014-01-16 15:48:22 UTC
Attachment 266476 [details] pushed as 788bd59 - cursor-tracker: Rely on gbm_bo_imports()'s buffer validation